i386: Add _mm256_cmov_si256 [PR98521]

Add missing _mm256_cmov_si256 intrinsic to xopintrin.h.

2021-01-05  Uroš Bizjak  <ubizjak@gmail.com>

gcc/
	PR target/98521
	* config/i386/xopintrin.h (_mm256_cmov_si256): New.